--- a/mycss.css
+++ b/mycss.css
@@ -1,5 +1,4 @@
 <style>
-
 .axis path,
 .axis line{
     fill: none;
@@ -12,6 +11,7 @@
     font-size: 11px;
 }
 .MyRect{
-		fill:steelblue;
+		/*fill:steelblue;*/
 	}
+	
 </style>
